Chinook demo, InvoiceConditionPanel month spinner bug fixed, no longer with DEC as initial value